[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Scene_PlayLevel.gd" type="Script" id=1]
[ext_resource path="res://scenes/Level.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/ui/UIScoreCounter.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/UILevelCounter.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/UITotalFoodCounter.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui/UILifeCounter.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ui/UIHealthBar.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/ui/UIStomachBar.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Scene_Pause.tscn" type="PackedScene" id=10]

[node name="Scene_PlayLevel" type="Node2D"]
script = ExtResource( 1 )

[node name="Level" parent="." instance=ExtResource( 2 )]

[node name="Border" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 384, 0, 384, -48, -48, -48, -48, 432, 560, 432, 560, -48, 384, -48, 384, 384, 0, 384, 0, 0 )

[node name="UI" type="Panel" parent="."]
margin_left = 384.0
margin_right = 512.0
margin_bottom = 384.0
theme = ExtResource( 3 )

[node name="UIScoreCounter" parent="UI" instance=ExtResource( 4 )]
position = Vector2( 0, 16 )

[node name="UILevelCounter" parent="UI" instance=ExtResource( 5 )]
position = Vector2( 0, 64 )

[node name="UITotalFoodCounter" parent="UI" instance=ExtResource( 6 )]
position = Vector2( 0, 112 )

[node name="UILifeCounter" parent="UI" instance=ExtResource( 7 )]
position = Vector2( 0, 160 )

[node name="UIHealthBar" parent="UI" instance=ExtResource( 8 )]
position = Vector2( 16, 208 )

[node name="UIStomachBar" parent="UI" instance=ExtResource( 9 )]
position = Vector2( 80, 208 )

[node name="Scene_Pause" parent="." instance=ExtResource( 10 )]
visible = false

[connection signal="food_picked_up" from="Level" to="." method="_on_Level_food_picked_up"]
[connection signal="goal_changed" from="Level" to="." method="_on_Level_goal_changed"]
[connection signal="goal_reached" from="Level" to="." method="_on_Level_goal_reached"]
[connection signal="health_changed" from="Level" to="." method="_on_Level_health_changed"]
[connection signal="health_out" from="Level" to="." method="_on_Level_health_out"]
[connection signal="lifes_changed" from="Level" to="." method="_on_Level_lifes_changed"]
[connection signal="lifes_out" from="Level" to="." method="_on_Level_lifes_out"]
[connection signal="player_catched" from="Level" to="." method="_on_Level_player_catched"]
